@@ -1075,6 +1075,7 @@ Jerry Seutter
 Pete Sevander
 Denis Severson
 Ian Seyer
+Daniel Shahaf
 Ha Shao
 Mark Shannon
 Richard Shapiro
