@@ -408,6 +408,8 @@ Tests
 Build
 -----
 
+- Issue #16593: Have BSD 'make -s' do the right thing, thanks to Daniel Shahaf
+
 - Issue #16262: fix out-of-src-tree builds, if mercurial is not installed.
 
 - Issue #15298: ensure _sysconfigdata is generated in build directory, not
